--- a/.github/workflows/run-e2e.yml
+++ b/.github/workflows/run-e2e.yml
@@ -9,18 +9,25 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-       - uses: actions/checkout@v4
-       - uses: actions/setup-node@v4
-         with:
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
           node-version: 20
-       - run: npm ci
-       - run: npm test
+
+      - name: Install Dependencies
+        run: npm ci
+
+      - name: Run Tests
+        run: npm test
+
+      - name: Build Application
+        run: npm run build
+
+      - name: Start Application
+        run: npm start &
 
       - name: Cypress run
         uses: cypress-io/github-action@v6
         env:
           APP_URL: "http://localhost:3000"
           NEXT_PUBLIC_API_BASE_URL: "https://ignite-devstore-api-one-zeta.vercel.app"
-        with:
-          build: npm run build
-          start: npm start
