--- a/.github/workflows/run-e2e.yml
+++ b/.github/workflows/run-e2e.yml
@@ -17,14 +17,11 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
-      - name: Run Tests
-        run: npm test
-
       - name: Build Application
         run: npm run build
 
       - name: Start Application
-        run: npm start &
+        run: npm run start
 
       - name: Cypress run
         uses: cypress-io/github-action@v6
