--- a/.github/workflows/run-e2e.yml
+++ b/.github/workflows/run-e2e.yml
@@ -24,7 +24,9 @@ jobs:
         run: npm run build
 
       - name: Start Application
-        run: npm start &
+         run: |
+            npm start &
+            npx wait-on http://localhost:3000
 
       - name: Cypress run
         uses: cypress-io/github-action@v6
