--- a/.github/workflows/run-e2e.yml
+++ b/.github/workflows/run-e2e.yml
@@ -24,9 +24,7 @@ jobs:
         run: npm run build
 
       - name: Start Application
-         run: |
-            npm start &
-            npx wait-on http://localhost:3000
+        run: npm start &
 
       - name: Cypress run
         uses: cypress-io/github-action@v6
