--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cypress": "npx cypress open"
   },
   "dependencies": {
+    "@t3-oss/env-nextjs": "^0.11.0",
     "lucide-react": "^0.424.0",
     "next": "14.2.5",
     "react": "^18",
@@ -28,5 +29,6 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  }
+  },
+  "type":"module"
 }
